--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-todos",
+  "name": "share-goods",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,13 +7,15 @@
     "start": "node server"
   },
   "keywords": [],
-  "author": "Michael Cheng <cheng.c.mike@gmail.com> (http://michaelcheng.io)",
+  "author": "group4",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
     "lodash": "^4.2.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
