--- a/package.json
+++ b/package.json
@@ -1,32 +1,15 @@
 {
-  "name": "share-goods",
+  "name": "ShareGoods",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "ShareGoods",
+  "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "group4",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4",
-    "lodash": "^4.2.1",
-    "react": "^0.14.7",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^3.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "engines": {
-    "node": "5.5.0"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0"
   }
 }
