--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "ejs": "^1.0.0"
+    "cookie-parser": "^1.4.3",
+    "ejs": "^1.0.0",
+    "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
