--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "group4",
-  "main": "server.js",
   "engines": {
-  "node": ">=4.6.x",
-  "npm": ">=2.15.x"
+    "node": ">=4.6.x",
+    "npm": ">=2.15.x"
   },
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^1.0.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "pg": "^6.1.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
