--- a/package.json
+++ b/package.json
@@ -13,32 +13,24 @@
   },
   "license": "MIT",
   "dependencies": {
-
-    "express": "~4.14.0",
-    "ejs": "~2.5.3",
-    "mongoose": "~4.7.0",
-    "passport": "~0.3.2",
-    "passport-local": "~1.0.0",
-    "passport-facebook": "~2.1.1",
-    "passport-twitter" : "~1.0.2",
-    "passport-google-oauth": "~1.0.0",
-    "connect-flash" : "~0.1.1",
-    "bcrypt-nodejs" : "latest",
-
-    "morgan": "~1.7.0",
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "express-session": "~1.14.2",
-
+    "bcrypt-nodejs": "latest",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^1.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "mongoose": "^4.7.0",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "~1.0.0",
+    "passport-local": "~1.0.0",
+    "passport-twitter": "~1.0.2",
     "pg": "^6.1.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
-
   }
 }
