--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "express": "^4.14.0",
     "express-session": "~1.14.2",
     "express-validation": "^1.0.1",
+    "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.4.0",
-    "joi": "^10.0.1",
+    "joi": "^10.0.2",
     "json-stringify": "^1.0.0",
     "morgan": "~1.7.0",
     "passport": "~0.3.2",
