--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.3",
+    "del": "^2.2.2",
     "ejs": "^1.0.0",
     "express": "^4.14.0",
     "express-session": "~1.14.2",
