--- a/package.json
+++ b/package.json
@@ -24,24 +24,33 @@
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
-    "connect-flash": "~0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "del": "^2.2.2",
     "ejs": "^1.0.0",
     "express": "^4.14.0",
-    "express-session": "~1.14.2",
+    "express-session": "^1.14.2",
     "express-validation": "^1.0.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-env": "^0.4.0",
     "gulp-load-plugins": "^1.4.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
     "joi": "^10.0.2",
     "json-stringify": "^1.0.0",
-    "morgan": "~1.7.0",
-    "passport": "~0.3.2",
-    "passport-facebook": "~2.1.1",
-    "passport-google-oauth": "~1.0.0",
-    "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.2",
-    "pg": "^6.1.0"
+    "lazypipe": "^1.0.1",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "pg": "^6.1.0",
+    "run-sequence": "^1.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
