--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "gulp serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-prebuild": "echo Stating Build",
+    "heroku-postbuild": "echo Build Succeeded"
   },
   "author": "group4",
   "engines": {
